--- a/index.css
+++ b/index.css
@@ -2,61 +2,62 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: start;
     border: 1px solid black;
-    width: 80vw;
-    height: 100%;
-    max-width: 600px;
-    height: 250px;
-    left: 10vw;
-    right: 10vw;
+    width: 600px;
+    height: 300px;
+    transform: translate(-50%, 0%);
+    left: 50%;
+    top: 50px;
+}
+p{
+    margin: 5px;
+    font-size: 20px;
 }
 .progress_bar_content{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 90%;
 }
 .progress_bar_content_switches{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
+    justify-content: space-around;
+    height: 150px;
+    width: 40%;
 }
 .progress_bar_content_switches div{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
-.progress_bar_content_switches_hidden{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-.progress_bar_content_circle{
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    border: 10px solid blue;
-    border-radius: 50%;
-    margin-right: 50px;
+input{
+    width: 50px;
+    height: 20px;
+    margin: 5px;
 }
 svg{
-    width: 100px;
-    height: 100px;
-    margin-right: 50px;
+    width: 200px;
+    height: 200px;
 }
 .ring{
   fill: none;
-  stroke: blue;
-  stroke-width: 5px;
+  stroke: aqua;
+  stroke-width: 15px;
   transform-origin: center;
   transform: rotate(270deg);
 }
 .clone{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
     position: absolute;
     background-color: aqua;
     transition: all 0.3s ease;
